--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "project_practice",
   "version": "1.0.0",
   "description": "react blog",
-  "main": "index.js",
+  "main": "app.js",
+  "engines": {
+    "npm": "6.14.13",
+    "node" : "14.17.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yoon",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongodb": "^4.1.0",
